crates/solidity/testing/snapshots/bindings_output/contracts/constructor_invocation/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:4:16]
   │
 4 │     constructor(int _x) {}
   │                ──────┬─────  
   │                      ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (5):
- Def: #1 ["A" @ input.sol:1:10] (contract)
- Def: #2 ["A" @ input.sol:2:14] (function, type: function (int256) returns void)
- Def: #3 ["_x" @ input.sol:2:20] (parameter, type: int256)
- Def: #4 ["Test" @ input.sol:7:10] (contract)
- Def: #5 ["foo" @ input.sol:8:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (2):
- Ref: ["A" @ input.sol:9:13] -> #1
- Ref: ["_x" @ input.sol:9:16] -> #3

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["constructor" @ input.sol:4:5]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract A {
   │          ┬  
   │          ╰── name: 1
 2 │     function A(int _x) {}
   │              ┬     ─┬  
   │              ╰───────── name: 2
   │                     │  
   │                     ╰── name: 3
   │ 
 4 │     constructor(int _x) {}
   │     ─────┬─────  
   │          ╰─────── ???
   │ 
 7 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 4
 8 │     function foo() public {
   │              ─┬─  
   │               ╰─── name: 5
 9 │         new A({_x: 2});
   │             ┬  ─┬  
   │             ╰────── ref: 1
   │                 │  
   │                 ╰── ref: 3
───╯
